lang/ParVarg.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParVarg.y
-----------------------------------------------------------------------------

state 206 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgramDef -> ProgramDef                   (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	UIdent -> L_UIdent                                 (5)
	LIdent -> L_LIdent                                 (6)
	MFun -> L_MFun                                     (7)
	ProgramDef -> ListImportDef ListClassDef           (8)
	ListClassDef ->                                    (9)
	ListClassDef -> ListClassDef ClassDef              (10)
	ImportDef -> 'import' UIdent ';'                   (11)
	ListImportDef ->                                   (12)
	ListImportDef -> ListImportDef ImportDef           (13)
	ListConstrTypeParam ->                             (14)
	ListConstrTypeParam -> ListConstrTypeParam ConstrTypeParam   (15)
	ConstrTypeParam -> LIdent                          (16)
	ConstrTypeParam -> UIdent                          (17)
	ConstrTypeParam -> '?'                             (18)
	ConstrTypeParam -> '[' LIdent 'super' ListTypeDef ']'   (19)
	ConstrTypeParam -> '[' '?' 'super' ListTypeDef ']'   (20)
	ConstrTypeParam -> '[' LIdent 'deriving' ListTypeDef ']'   (21)
	ConstrTypeParam -> '[' '?' 'deriving' ListTypeDef ']'   (22)
	TypeDef -> UIdent ListConstrTypeParam              (23)
	TypeDef -> LIdent ListConstrTypeParam              (24)
	TypeDef -> TypeDef1                                (25)
	TypeDef1 -> '(' TypeDef ')'                        (26)
	ListTypeDef -> TypeDef                             (27)
	ListTypeDef -> TypeDef ',' ListTypeDef             (28)
	PrimFreeType -> '(' FreeTypeDef ')'                (29)
	PrimFreeType -> LIdent                             (30)
	PrimFreeType -> UIdent                             (31)
	FreeTypeDef -> UIdent ListPrimFreeType             (32)
	FreeTypeDef -> LIdent ListPrimFreeType             (33)
	FreeTypeDef -> FreeTypeDef1                        (34)
	FreeTypeDef1 -> '(' FreeTypeDef ')'                (35)
	ListPrimFreeType ->                                (36)
	ListPrimFreeType -> ListPrimFreeType PrimFreeType   (37)
	ListArgDef ->                                      (38)
	ListArgDef -> ListArgDef ArgDef                    (39)
	ArgDef -> '(' LIdent ':' FreeTypeDef ')'           (40)
	ArgDef -> LIdent                                   (41)
	SuperclassType -> FreeTypeDef                      (42)
	ListSuperclassType -> SuperclassType               (43)
	ListSuperclassType -> SuperclassType ',' ListSuperclassType   (44)
	ClassDef -> ListClassModifier 'struct' UIdent 'where' '{' ListClassField '}'   (45)
	ClassDef -> ListClassModifier 'class' UIdent IsDeriving IsImplementing 'where' '{' ClassContents '}'   (46)
	ClassDef -> ListClassModifier 'template' UIdent ListConstrTypeParam IsDeriving IsImplementing 'where' '{' ClassContents '}'   (47)
	IsImplementing -> 'implementing' ListSuperclassType   (48)
	IsImplementing ->                                  (49)
	IsDeriving -> 'deriving' SuperclassType            (50)
	IsDeriving ->                                      (51)
	ListClassModifier ->                               (52)
	ListClassModifier -> ListClassModifier ClassModifier   (53)
	ClassModifier -> 'module'                          (54)
	ClassModifier -> 'interface'                       (55)
	ClassModifier -> 'sealed'                          (56)
	ClassModifier -> 'native'                          (57)
	ClassContents -> ListMemberDef ListFunDef          (58)
	MemberDef -> UIdent                                (59)
	MemberDef -> UIdent 'has' '{' ListClassField '}'   (60)
	ListMemberDef ->                                   (61)
	ListMemberDef -> MemberDef                         (62)
	ListMemberDef -> MemberDef ';' ListMemberDef       (63)
	FunDef -> ListFunctionModifier 'function' FunctionName FunTemplateParams ListArgDef RetType '=' Expr   (64)
	FunDef -> ListFunctionModifier 'function' FunctionName FunTemplateParams ListArgDef AbsRetType   (65)
	RetType -> ':' FreeTypeDef                         (66)
	RetType ->                                         (67)
	FunctionName -> LIdent                             (68)
	FunctionName -> '(' Operator ')'                   (69)
	Operator -> '+'                                    (70)
	Operator -> '-'                                    (71)
	Operator -> '*'                                    (72)
	Operator -> '/'                                    (73)
	Operator -> '^'                                    (74)
	Operator -> '<'                                    (75)
	Operator -> '>'                                    (76)
	Operator -> '<='                                   (77)
	Operator -> '>='                                   (78)
	Operator -> '=='                                   (79)
	AbsRetType -> ':' 'abstract' FreeTypeDef           (80)
	AbsRetType ->                                      (81)
	FunTemplateParams ->                               (82)
	FunTemplateParams -> '<' ListTemplateParam '>'     (83)
	TemplateParam -> ConstrTypeParam                   (84)
	ListTemplateParam -> TemplateParam                 (85)
	ListTemplateParam -> TemplateParam ',' ListTemplateParam   (86)
	ListFunDef ->                                      (87)
	ListFunDef -> FunDef                               (88)
	ListFunDef -> FunDef ';' ListFunDef                (89)
	ListFunctionModifier ->                            (90)
	ListFunctionModifier -> ListFunctionModifier FunctionModifier   (91)
	FunctionModifier -> 'static'                       (92)
	FunctionModifier -> 'internal'                     (93)
	FunctionModifier -> 'implement'                    (94)
	FunctionModifier -> 'final'                        (95)
	FunctionModifier -> 'unique'                       (96)
	FunctionModifier -> 'native'                       (97)
	ClassField -> FieldModifier LIdent ':' FreeTypeDef   (98)
	ClassField -> LIdent ':' FreeTypeDef               (99)
	ListClassField ->                                  (100)
	ListClassField -> ClassField                       (101)
	ListClassField -> ClassField ';' ListClassField    (102)
	FieldModifier -> 'internal'                        (103)
	FieldModifier -> 'unique'                          (104)
	Expr -> 'define' '{' ListAsDef '}' 'in' Expr       (105)
	Expr -> 'define' AsDef 'in' Expr                   (106)
	Expr -> 'match' Expr 'with' '{' ListMatchClause '}'   (107)
	Expr -> 'if' Expr 'then' Expr 'else' Expr          (108)
	Expr -> '(' '\\' ListArgDef ':' TypeDef '=>' Expr ')'   (109)
	Expr -> '[' ListListElem ']'                       (110)
	Expr -> Expr1                                      (111)
	ListAsDef ->                                       (112)
	ListAsDef -> AsDef                                 (113)
	ListAsDef -> AsDef ';' ListAsDef                   (114)
	AsDef -> Expr 'as' LIdent                          (115)
	ListMatchClause -> MatchClause                     (116)
	ListMatchClause -> MatchClause ';' ListMatchClause   (117)
	MatchClause -> Expr '->' Expr                      (118)
	Functorial -> 'this'                               (119)
	Functorial -> 'super'                              (120)
	Functorial -> UIdent                               (121)
	Functorial -> LIdent                               (122)
	Functorial -> MFun                                 (123)
	Functorial -> '(' Operator ')'                     (124)
	Functorial -> '(' Expr6 ')'                        (125)
	Arg -> Expr6                                       (126)
	Arg -> Functorial                                  (127)
	ListArg ->                                         (128)
	ListArg -> ListArg Arg                             (129)
	Expr5 -> Functorial ListArg                        (130)
	Expr5 -> Expr6                                     (131)
	ListElem -> Expr                                   (132)
	ListListElem ->                                    (133)
	ListListElem -> ListElem                           (134)
	ListListElem -> ListElem ',' ListListElem          (135)
	Expr1 -> Expr1 '==' Expr2                          (136)
	Expr1 -> Expr2 'mod' Expr2                         (137)
	Expr1 -> 'not' Expr2                               (138)
	Expr1 -> Expr2 '||' Expr2                          (139)
	Expr1 -> Expr2 '&&' Expr2                          (140)
	Expr1 -> Expr2 '<' Expr2                           (141)
	Expr1 -> Expr2 '>' Expr2                           (142)
	Expr1 -> Expr2 '<=' Expr2                          (143)
	Expr1 -> Expr2 '>=' Expr2                          (144)
	Expr1 -> Expr2                                     (145)
	Expr2 -> Expr2 '+' Expr3                           (146)
	Expr2 -> Expr2 '-' Expr3                           (147)
	Expr2 -> Expr3                                     (148)
	Expr3 -> Expr3 '*' Expr4                           (149)
	Expr3 -> Expr3 '/' Expr4                           (150)
	Expr3 -> Expr4                                     (151)
	Expr4 -> Expr5 '^' Expr4                           (152)
	Expr4 -> Expr5                                     (153)
	Expr6 -> Boolean                                   (154)
	Expr6 -> Integer                                   (155)
	Expr6 -> Double                                    (156)
	Expr6 -> '\'' Char '\''                            (157)
	Expr6 -> '\"' String '\"'                          (158)
	Expr6 -> '_'                                       (159)
	Expr6 -> '(' Expr ')'                              (160)
	Boolean -> 'true'                                  (161)
	Boolean -> 'false'                                 (162)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'\"'           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'\''           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'=>'           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'?'            { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	'\\'           { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'^'            { PT _ (TS _ 25) }
	'_'            { PT _ (TS _ 26) }
	'abstract'     { PT _ (TS _ 27) }
	'as'           { PT _ (TS _ 28) }
	'class'        { PT _ (TS _ 29) }
	'define'       { PT _ (TS _ 30) }
	'deriving'     { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'false'        { PT _ (TS _ 33) }
	'final'        { PT _ (TS _ 34) }
	'function'     { PT _ (TS _ 35) }
	'has'          { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'implement'    { PT _ (TS _ 38) }
	'implementing' { PT _ (TS _ 39) }
	'import'       { PT _ (TS _ 40) }
	'in'           { PT _ (TS _ 41) }
	'interface'    { PT _ (TS _ 42) }
	'internal'     { PT _ (TS _ 43) }
	'match'        { PT _ (TS _ 44) }
	'mod'          { PT _ (TS _ 45) }
	'module'       { PT _ (TS _ 46) }
	'native'       { PT _ (TS _ 47) }
	'not'          { PT _ (TS _ 48) }
	'sealed'       { PT _ (TS _ 49) }
	'static'       { PT _ (TS _ 50) }
	'struct'       { PT _ (TS _ 51) }
	'super'        { PT _ (TS _ 52) }
	'template'     { PT _ (TS _ 53) }
	'then'         { PT _ (TS _ 54) }
	'this'         { PT _ (TS _ 55) }
	'true'         { PT _ (TS _ 56) }
	'unique'       { PT _ (TS _ 57) }
	'where'        { PT _ (TS _ 58) }
	'with'         { PT _ (TS _ 59) }
	'{'            { PT _ (TS _ 60) }
	'||'           { PT _ (TS _ 61) }
	'}'            { PT _ (TS _ 62) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_UIdent       { PT _ (T_UIdent $$) }
	L_LIdent       { PT _ (T_LIdent $$) }
	L_MFun         { PT _ (T_MFun $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgramDef rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	UIdent          rule  5
	LIdent          rule  6
	MFun            rule  7
	ProgramDef      rule  8
	ListClassDef    rules 9, 10
	ImportDef       rule  11
	ListImportDef   rules 12, 13
	ListConstrTypeParam rules 14, 15
	ConstrTypeParam rules 16, 17, 18, 19, 20, 21, 22
	TypeDef         rules 23, 24, 25
	TypeDef1        rule  26
	ListTypeDef     rules 27, 28
	PrimFreeType    rules 29, 30, 31
	FreeTypeDef     rules 32, 33, 34
	FreeTypeDef1    rule  35
	ListPrimFreeType rules 36, 37
	ListArgDef      rules 38, 39
	ArgDef          rules 40, 41
	SuperclassType  rule  42
	ListSuperclassType rules 43, 44
	ClassDef        rules 45, 46, 47
	IsImplementing  rules 48, 49
	IsDeriving      rules 50, 51
	ListClassModifier rules 52, 53
	ClassModifier   rules 54, 55, 56, 57
	ClassContents   rule  58
	MemberDef       rules 59, 60
	ListMemberDef   rules 61, 62, 63
	FunDef          rules 64, 65
	RetType         rules 66, 67
	FunctionName    rules 68, 69
	Operator        rules 70, 71, 72, 73, 74, 75, 76, 77, 78, 79
	AbsRetType      rules 80, 81
	FunTemplateParams rules 82, 83
	TemplateParam   rule  84
	ListTemplateParam rules 85, 86
	ListFunDef      rules 87, 88, 89
	ListFunctionModifier rules 90, 91
	FunctionModifier rules 92, 93, 94, 95, 96, 97
	ClassField      rules 98, 99
	ListClassField  rules 100, 101, 102
	FieldModifier   rules 103, 104
	Expr            rules 105, 106, 107, 108, 109, 110, 111
	ListAsDef       rules 112, 113, 114
	AsDef           rule  115
	ListMatchClause rules 116, 117
	MatchClause     rule  118
	Functorial      rules 119, 120, 121, 122, 123, 124, 125
	Arg             rules 126, 127
	ListArg         rules 128, 129
	Expr5           rules 130, 131
	ListElem        rule  132
	ListListElem    rules 133, 134, 135
	Expr1           rules 136, 137, 138, 139, 140, 141, 142, 143, 144, 145
	Expr2           rules 146, 147, 148
	Expr3           rules 149, 150, 151
	Expr4           rules 152, 153
	Expr6           rules 154, 155, 156, 157, 158, 159, 160
	Boolean         rules 161, 162

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'class'        reduce using rule 12
	'import'       reduce using rule 12
	'interface'    reduce using rule 12
	'module'       reduce using rule 12
	'native'       reduce using rule 12
	'sealed'       reduce using rule 12
	'struct'       reduce using rule 12
	'template'     reduce using rule 12
	%eof           reduce using rule 12

	ProgramDef     goto state 3
	ListImportDef  goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'\"'           reduce using rule 1
	'&&'           reduce using rule 1
	'\''           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'->'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'_'            reduce using rule 1
	'as'           reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'mod'          reduce using rule 1
	'super'        reduce using rule 1
	'then'         reduce using rule 1
	'this'         reduce using rule 1
	'true'         reduce using rule 1
	'with'         reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_integ        reduce using rule 1
	L_doubl        reduce using rule 1
	L_UIdent       reduce using rule 1
	L_LIdent       reduce using rule 1
	L_MFun         reduce using rule 1


State 3

	%start_pProgramDef -> ProgramDef .                  (rule 0)

	%eof           accept


State 4

	ProgramDef -> ListImportDef . ListClassDef          (rule 8)
	ListImportDef -> ListImportDef . ImportDef          (rule 13)

	'class'        reduce using rule 9
	'import'       shift, and enter state 7
	'interface'    reduce using rule 9
	'module'       reduce using rule 9
	'native'       reduce using rule 9
	'sealed'       reduce using rule 9
	'struct'       reduce using rule 9
	'template'     reduce using rule 9
	%eof           reduce using rule 9

	ListClassDef   goto state 5
	ImportDef      goto state 6

State 5

	ProgramDef -> ListImportDef ListClassDef .          (rule 8)
	ListClassDef -> ListClassDef . ClassDef             (rule 10)

	'class'        reduce using rule 52
	'interface'    reduce using rule 52
	'module'       reduce using rule 52
	'native'       reduce using rule 52
	'sealed'       reduce using rule 52
	'struct'       reduce using rule 52
	'template'     reduce using rule 52
	%eof           reduce using rule 8

	ClassDef       goto state 10
	ListClassModifiergoto state 11

State 6

	ListImportDef -> ListImportDef ImportDef .          (rule 13)

	'class'        reduce using rule 13
	'import'       reduce using rule 13
	'interface'    reduce using rule 13
	'module'       reduce using rule 13
	'native'       reduce using rule 13
	'sealed'       reduce using rule 13
	'struct'       reduce using rule 13
	'template'     reduce using rule 13
	%eof           reduce using rule 13


State 7

	ImportDef -> 'import' . UIdent ';'                  (rule 11)

	L_UIdent       shift, and enter state 9

	UIdent         goto state 8

State 8

	ImportDef -> 'import' UIdent . ';'                  (rule 11)

	';'            shift, and enter state 20


State 9

	UIdent -> L_UIdent .                                (rule 5)

	'\"'           reduce using rule 5
	'&&'           reduce using rule 5
	'\''           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'->'           reduce using rule 5
	'/'            reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'=>'           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'?'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'^'            reduce using rule 5
	'_'            reduce using rule 5
	'as'           reduce using rule 5
	'deriving'     reduce using rule 5
	'else'         reduce using rule 5
	'false'        reduce using rule 5
	'final'        reduce using rule 5
	'function'     reduce using rule 5
	'has'          reduce using rule 5
	'implement'    reduce using rule 5
	'implementing' reduce using rule 5
	'internal'     reduce using rule 5
	'mod'          reduce using rule 5
	'native'       reduce using rule 5
	'static'       reduce using rule 5
	'super'        reduce using rule 5
	'then'         reduce using rule 5
	'this'         reduce using rule 5
	'true'         reduce using rule 5
	'unique'       reduce using rule 5
	'where'        reduce using rule 5
	'with'         reduce using rule 5
	'||'           reduce using rule 5
	'}'            reduce using rule 5
	L_integ        reduce using rule 5
	L_doubl        reduce using rule 5
	L_UIdent       reduce using rule 5
	L_LIdent       reduce using rule 5
	L_MFun         reduce using rule 5


State 10

	ListClassDef -> ListClassDef ClassDef .             (rule 10)

	'class'        reduce using rule 10
	'interface'    reduce using rule 10
	'module'       reduce using rule 10
	'native'       reduce using rule 10
	'sealed'       reduce using rule 10
	'struct'       reduce using rule 10
	'template'     reduce using rule 10
	%eof           reduce using rule 10


State 11

	ClassDef -> ListClassModifier . 'struct' UIdent 'where' '{' ListClassField '}'    (rule 45)
	ClassDef -> ListClassModifier . 'class' UIdent IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 46)
	ClassDef -> ListClassModifier . 'template' UIdent ListConstrTypeParam IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 47)
	ListClassModifier -> ListClassModifier . ClassModifier    (rule 53)

	'class'        shift, and enter state 13
	'interface'    shift, and enter state 14
	'module'       shift, and enter state 15
	'native'       shift, and enter state 16
	'sealed'       shift, and enter state 17
	'struct'       shift, and enter state 18
	'template'     shift, and enter state 19

	ClassModifier  goto state 12

State 12

	ListClassModifier -> ListClassModifier ClassModifier .    (rule 53)

	'class'        reduce using rule 53
	'interface'    reduce using rule 53
	'module'       reduce using rule 53
	'native'       reduce using rule 53
	'sealed'       reduce using rule 53
	'struct'       reduce using rule 53
	'template'     reduce using rule 53


State 13

	ClassDef -> ListClassModifier 'class' . UIdent IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 46)

	L_UIdent       shift, and enter state 9

	UIdent         goto state 23

State 14

	ClassModifier -> 'interface' .                      (rule 55)

	'class'        reduce using rule 55
	'interface'    reduce using rule 55
	'module'       reduce using rule 55
	'native'       reduce using rule 55
	'sealed'       reduce using rule 55
	'struct'       reduce using rule 55
	'template'     reduce using rule 55


State 15

	ClassModifier -> 'module' .                         (rule 54)

	'class'        reduce using rule 54
	'interface'    reduce using rule 54
	'module'       reduce using rule 54
	'native'       reduce using rule 54
	'sealed'       reduce using rule 54
	'struct'       reduce using rule 54
	'template'     reduce using rule 54


State 16

	ClassModifier -> 'native' .                         (rule 57)

	'class'        reduce using rule 57
	'interface'    reduce using rule 57
	'module'       reduce using rule 57
	'native'       reduce using rule 57
	'sealed'       reduce using rule 57
	'struct'       reduce using rule 57
	'template'     reduce using rule 57


State 17

	ClassModifier -> 'sealed' .                         (rule 56)

	'class'        reduce using rule 56
	'interface'    reduce using rule 56
	'module'       reduce using rule 56
	'native'       reduce using rule 56
	'sealed'       reduce using rule 56
	'struct'       reduce using rule 56
	'template'     reduce using rule 56


State 18

	ClassDef -> ListClassModifier 'struct' . UIdent 'where' '{' ListClassField '}'    (rule 45)

	L_UIdent       shift, and enter state 9

	UIdent         goto state 22

State 19

	ClassDef -> ListClassModifier 'template' . UIdent ListConstrTypeParam IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 47)

	L_UIdent       shift, and enter state 9

	UIdent         goto state 21

State 20

	ImportDef -> 'import' UIdent ';' .                  (rule 11)

	'class'        reduce using rule 11
	'import'       reduce using rule 11
	'interface'    reduce using rule 11
	'module'       reduce using rule 11
	'native'       reduce using rule 11
	'sealed'       reduce using rule 11
	'struct'       reduce using rule 11
	'template'     reduce using rule 11
	%eof           reduce using rule 11


State 21

	ClassDef -> ListClassModifier 'template' UIdent . ListConstrTypeParam IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 47)

	'?'            reduce using rule 14
	'['            reduce using rule 14
	'deriving'     reduce using rule 14
	'implementing' reduce using rule 14
	'where'        reduce using rule 14
	L_UIdent       reduce using rule 14
	L_LIdent       reduce using rule 14

	ListConstrTypeParamgoto state 27

State 22

	ClassDef -> ListClassModifier 'struct' UIdent . 'where' '{' ListClassField '}'    (rule 45)

	'where'        shift, and enter state 26


State 23

	ClassDef -> ListClassModifier 'class' UIdent . IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 46)

	'deriving'     shift, and enter state 25
	'implementing' reduce using rule 51
	'where'        reduce using rule 51

	IsDeriving     goto state 24

State 24

	ClassDef -> ListClassModifier 'class' UIdent IsDeriving . IsImplementing 'where' '{' ClassContents '}'    (rule 46)

	'implementing' shift, and enter state 43
	'where'        reduce using rule 49

	IsImplementing goto state 42

State 25

	IsDeriving -> 'deriving' . SuperclassType           (rule 50)

	'('            shift, and enter state 41
	L_UIdent       shift, and enter state 9
	L_LIdent       shift, and enter state 34

	UIdent         goto state 36
	LIdent         goto state 37
	FreeTypeDef    goto state 38
	FreeTypeDef1   goto state 39
	SuperclassType goto state 40

State 26

	ClassDef -> ListClassModifier 'struct' UIdent 'where' . '{' ListClassField '}'    (rule 45)

	'{'            shift, and enter state 35


State 27

	ListConstrTypeParam -> ListConstrTypeParam . ConstrTypeParam    (rule 15)
	ClassDef -> ListClassModifier 'template' UIdent ListConstrTypeParam . IsDeriving IsImplementing 'where' '{' ClassContents '}'    (rule 47)

	'?'            shift, and enter state 32
	'['            shift, and enter state 33
	'deriving'     shift, and enter state 25
	'implementing' reduce using rule 51
	'where'        reduce using rule 51
	L_UIdent       shift, and enter state 9
	L_LIdent       shift, and enter state 34

	UIdent         goto state 28
	LIdent         goto state 29
	ConstrTypeParamgoto state 30
	IsDeriving     goto state 31

State 28

	ConstrTypeParam -> UIdent .                         (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	'=>'           reduce using rule 17
	'>'            reduce using rule 17
	'?'            reduce using rule 17
	'['            reduce using rule 17
	']'            reduce using rule 17
	'deriving'     reduce using rule 17
	'implementing' reduce using rule 17
	'where'        reduce using rule 17
	L_UIdent       reduce using rule 17
	L_LIdent       reduce using rule 17


State 29

	ConstrTypeParam -> LIdent .                         (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	'=>'           reduce using rule 16
	'>'            reduce using rule 16
	'?'            reduce using rule 16
	'['            reduce using rule 16
	']'            reduce using rule 16
	'deriving'     reduce using rule 16
	'implementing' reduce using rule 16
	'where'        reduce using rule 16
	L_UIdent       reduce using rule 16
	L_LIdent       reduce using rule 16


State 30

	ListConstrTypeParam -> ListConstrTypeParam ConstrTypeParam .    (rule 15)

	')'            reduce using rule 15
	','            reduce using rule 15
	'=>'           reduce using rule 15
	'?'            reduce using rule 15
	'['            reduce using rule 15
	']'            reduce using rule 15
	'deriving'     reduce using rule 15
	'implementing' reduce using rule 15
	'where'        reduce using rule 15
	L_UIdent       reduce using rule 15
	L_LIdent       reduce using rule 15


State 31

	ClassDef -> ListClassModifier 'template' UIdent ListConstrTypeParam IsDeriving . IsImplementing 'where' '{' ClassContents '}'    (rule 47)

	'implementing' shift, and enter state 43
	'where'        reduce using rule 49

	IsImplementing goto state 58

State 32

	ConstrTypeParam -> '?' .                            (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	'=>'           reduce using rule 18
	'>'            reduce using rule 18
	'?'            reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	'deriving'     reduce using rule 18
	'implementing' reduce using rule 18
	'where'        reduce using rule 18
	L_UIdent       reduce using rule 18
	L_LIdent       reduce using rule 18


State 33

	ConstrTypeParam -> '[' . LIdent 'super' ListTypeDef ']'    (rule 19)
	ConstrTypeParam -> '[' . '?' 'super' ListTypeDef ']'    (rule 20)
	ConstrTypeParam -> '[' . LIdent 'deriving' ListTypeDef ']'    (rule 21)
	ConstrTypeParam -> '[' . '?' 'deriving' ListTypeDef ']'    (rule 22)

	'?'            shift, and enter state 57
	L_LIdent       shift, and enter state 34

	LIdent         goto state 56

State 34

	LIdent -> L_LIdent .                                (rule 6)

	'\"'           reduce using rule 6
	'&&'           reduce using rule 6
	'\''           reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	'*'            reduce using rule 6
	'+'            reduce using rule 6
	','            reduce using rule 6
	'-'            reduce using rule 6
	'->'           reduce using rule 6
	'/'            reduce using rule 6
	':'            reduce using rule 6
	';'            reduce using rule 6
	'<'            reduce using rule 6
	'<='           reduce using rule 6
	'='            reduce using rule 6
	'=='           reduce using rule 6
	'=>'           reduce using rule 6
	'>'            reduce using rule 6
	'>='           reduce using rule 6
	'?'            reduce using rule 6
	'['            reduce using rule 6
	']'            reduce using rule 6
	'^'            reduce using rule 6
	'_'            reduce using rule 6
	'as'           reduce using rule 6
	'deriving'     reduce using rule 6
	'else'         reduce using rule 6
	'false'        reduce using rule 6
	'implementing' reduce using rule 6
	'in'           reduce using rule 6
	'mod'          reduce using rule 6
	'super'        reduce using rule 6
	'then'         reduce using rule 6
	'this'         reduce using rule 6
	'true'         reduce using rule 6
	'where'        reduce using rule 6
	'with'         reduce using rule 6
	'||'           reduce using rule 6
	'}'            reduce using rule 6
	L_integ        reduce using rule 6
	L_doubl        reduce using rule 6
	L_UIdent       reduce using rule 6
	L_LIdent       reduce using rule 6
	L_MFun         reduce using rule 6


State 35

	ClassDef -> ListClassModifier 'struct' UIdent 'where' '{' . ListClassField '}'    (rule 45)

	'internal'     shift, and enter state 54
	'unique'       shift, and enter state 55
	'}'            reduce using rule 100
	L_LIdent       shift, and enter state 34

	LIdent         goto state 50
	ClassField     goto state 51
	ListClassField goto state 52
	FieldModifier  goto state 53

State 36

	FreeTypeDef -> UIdent . ListPrimFreeType            (rule 32)

	'('            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'='            reduce using rule 36
	'implementing' reduce using rule 36
	'where'        reduce using rule 36
	'}'            reduce using rule 36
	L_UIdent       reduce using rule 36
	L_LIdent       reduce using rule 36

	ListPrimFreeTypegoto state 49

State 37

	FreeTypeDef -> LIdent . ListPrimFreeType            (rule 33)

	'('            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'='            reduce using rule 36
	'implementing' reduce using rule 36
	'where'        reduce using rule 36
	'}'            reduce using rule 36
	L_UIdent       reduce using rule 36
	L_LIdent       reduce using rule 36

	ListPrimFreeTypegoto state 48

State 38

	SuperclassType -> FreeTypeDef .                     (rule 42)

	','            reduce using rule 42
	'implementing' reduce using rule 42
	'where'        reduce using rule 42


State 39

	FreeTypeDef -> FreeTypeDef1 .                       (rule 34)

	')'            reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34
	'='            reduce using rule 34
	'implementing' reduce using rule 34
	'where'        reduce using rule 34
	'}'            reduce using rule 34


State 40

	IsDeriving -> 'deriving' SuperclassType .           (rule 50)

	'implementing' reduce using rule 50
	'where'        reduce using rule 50


State 41

	FreeTypeDef1 -> '(' . FreeTypeDef ')'               (rule 35)

	'('            shift, and enter state 41
	L_UIdent       shift, and enter state 9
	L_LIdent       shift, and enter state 34

	UIdent         goto state 36
	LIdent         goto state 37
	FreeTypeDef    goto state 47
	FreeTypeDef1   goto state 39

State 42

	ClassDef -> ListClassModifier 'class' UIdent IsDeriving IsImplementing . 'where' '{' ClassContents '}'    (rule 46)

	'where'        shift, and enter state 46


State 43

	IsImplementing -> 'implementing' . ListSuperclassType    (rule 48)

	'('            shift, and enter state 41
	L_UIdent       shift, and enter state 9
	L_LIdent       shift, and enter state 34

	UIdent         goto state 36
	LIdent         goto state 37
	FreeTypeDef    goto state 38
	FreeTypeDef1   goto state 39
	SuperclassType goto state 44
	ListSuperclassTypegoto state 45

State 44

	ListSuperclassType -> SuperclassType .              (rule 43)
	ListSuperclassType -> SuperclassType . ',' ListSuperclassType    (rule 44)

	','            shift, and enter state 74
	'where'        reduce using rule 43


State 45

	IsImplementing -> 'implementing' ListSuperclassType .    (rule 48)

	'where'        reduce using rule 48


State 46

	ClassDef -> ListClassModifier 'class' UIdent IsDeriving IsImplementing 'where' . '{' ClassContents '}'    (rule 46)

	'{'            shift, and enter state 73


State 47

	FreeTypeDef1 -> '(' FreeTypeDef . ')'               (rule 35)

	')'            shift, and enter state 72


State 48
